# codex-reset-checker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
examples/: reset_credits.json
scripts/: check_reset_expiry.py
src/codex_reset_checker/: __init__.py  cli.py
tests/: conftest.py  test_cli.py
